--- a/about-us.html
+++ b/about-us.html
@@ -53,7 +53,7 @@
         <body>
             <nav class="navigator">
                 <a href="index.html">HOME</a>
-                <a href="about-us.html">ABOUT-US</a>
+                <a href="about-us.html">ABOUT US</a>
                 <a href="contact-us.html">CONTACT US</a>
             </nav>
 
