--- a/contact-us.html
+++ b/contact-us.html
@@ -91,6 +91,12 @@
         </style>
         </head>
         <body>
+            <nav class="navigator">
+                <a href="index.html">HOME</a>
+                <a href="about-us.html">ABOUT-US</a>
+                <a href="contact-us.html">CONTACT US</a>
+            </nav>
+            
              <div class="header">
     <h1>For Children's</h1>
 </div>
@@ -187,3 +193,4 @@
         </body>
 
         </html>
+
